# functional_python_algorithms

./: README.md  pyproject.toml
functional_python_algorithms/maths/: euclidean_distance.py  factorial.py  fibonacci.py  is_palindrome.py  is_prime.py  triangular_numbers.py
functional_python_algorithms/sorts/: bubble_sort.py  insertion_sort.py  quicksort.py
tests/test_sorts/: test_all_sorts.py  test_bubble_sort.py  test_insertion_sort.py  test_quicksort.py
