[tool.poetry]
name = "functional-python-algorithms"
version = "0.1.0"
description = "Algorithms implemented in python, in a functional style and using functional programming libraries."
authors = ["Vinicius Miradouro <miradouro.v@gmail.com>"]
license = "GPL-3"
readme = "README.md"
packages = [{ include = "functional_python_algorithms" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-ruff = "^0.1.1"
autopep8 = "^2.0.2"
hypothesis = "^6.82.0"
tox-poetry-installer = "^0.10.3"
ipython = "^8.14.0"
pytest-pyright = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov"

[tool.ruff]
line-length = 120

[tool.autopep8]
max_line_length = 120

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py311

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/
"""

[tool.coverage.run]
omit = ['*/tests/*']
